src/styles.css
@font-face{
    font-family: 'Fira';
    src: url('assets/fonts/FiraCode-Regular.ttf');
    font-weight: 400;
    font-style: normal;
}

@font-face{
    font-family: 'OpenSans';
    src: url('assets/fonts/OpenSans-Regular.ttf');
    font-weight: 400;
    font-style: normal;
}

body {
    background-color: #eee;
    font-family: OpenSans, sans-serif;
}

.root {
    display: flex;
    padding: 10px 5px;
    justify-content: center;
    flex-wrap: wrap;
}

.example {
    flex-basis: 300px;
    height: 340px;
    margin: 3px;
    font-size: 15px;
}

pre {
    display: block;
    padding: 10px;
    margin-bottom: 5px;
    border-radius: 5px;
    background-color: #ababab;
}

code {
    color: #000;
    font-family: Fira, monospace;
    font-size: 13px;
}

.alert {
    color: red;
}

